tests/fixtures/cargo_error_output.txt
   Compiling myproject v0.1.0 (/home/user/myproject)
error[E0308]: mismatched types
 --> src/main.rs:15:20
  |
15 |     let x: i32 = "hello";
  |            ---   ^^^^^^^ expected `i32`, found `&str`
  |            |
  |            expected due to this

error[E0425]: cannot find value `undefined_var` in this scope
 --> src/main.rs:20:5
  |
20 |     undefined_var
  |     ^^^^^^^^^^^^^ not found in this scope

error: aborting due to 2 previous errors

For more information about an error, try `rustc --explain E0308`.
error: could not compile `myproject` (bin "myproject") due to 2 previous errors
